# surejournal

./: .$surejournal.drawio.bkp  README.md  entries.py  index.html  index2.html  main.py  pyproject.toml  script.js
templates/: home.html  layout.html
