[project]
name = "fastapi-blog"
version = "0.1.0"
description = "This is a tutorial repo where I follow Corey Schafer's YouTube series on how to make FastAPI web applications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
]
[tool.uv.sources]
fastapi = { workspace = true }
