[project]
name = "surejournal"
version = "0.1.0"
description = "This is a tutorial/personal project repo where I follow Corey Schafer's YouTube series on how to make a FastAPI web app in order to make my first independent web app."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
]
[tool.uv.sources]
fastapi = { workspace = true }
